# internal/models/tracks.go
@@ -74,29 +74,6 @@ var TrackTableColumns = struct {
 
 // Generated where
 
-type whereHelperint struct{ field string }
-
-func (w whereHelperint) EQ(x int) qm.QueryMod  { return qmhelper.Where(w.field, qmhelper.EQ, x) }
-func (w whereHelperint) NEQ(x int) qm.QueryMod { return qmhelper.Where(w.field, qmhelper.NEQ, x) }
-func (w whereHelperint) LT(x int) qm.QueryMod  { return qmhelper.Where(w.field, qmhelper.LT, x) }
-func (w whereHelperint) LTE(x int) qm.QueryMod { return qmhelper.Where(w.field, qmhelper.LTE, x) }
-func (w whereHelperint) GT(x int) qm.QueryMod  { return qmhelper.Where(w.field, qmhelper.GT, x) }
-func (w whereHelperint) GTE(x int) qm.QueryMod { return qmhelper.Where(w.field, qmhelper.GTE, x) }
-func (w whereHelperint) IN(slice []int) qm.QueryMod {
-	values := make([]interface{}, 0, len(slice))
-	for _, value := range slice {
-		values = append(values, value)
-	}
-	return qm.WhereIn(fmt.Sprintf("%s IN ?", w.field), values...)
-}
-func (w whereHelperint) NIN(slice []int) qm.QueryMod {
-	values := make([]interface{}, 0, len(slice))
-	for _, value := range slice {
-		values = append(values, value)
-	}
-	return qm.WhereNotIn(fmt.Sprintf("%s NOT IN ?", w.field), values...)
-}
-
 type whereHelpernull_String struct{ field string }
 
 func (w whereHelpernull_String) EQ(x null.String) qm.QueryMod {
@@ -173,14 +150,17 @@ var TrackWhere = struct {
 
 // TrackRels is where relationship names are stored.
 var TrackRels = struct {
-	VinylSide string
+	VinylSide  string
+	TrackPlays string
 }{
-	VinylSide: "VinylSide",
+	VinylSide:  "VinylSide",
+	TrackPlays: "TrackPlays",
 }
 
 // trackR is where relationships are stored.
 type trackR struct {
-	VinylSide *VinylSide `boil:"VinylSide" json:"VinylSide" toml:"VinylSide" yaml:"VinylSide"`
+	VinylSide  *VinylSide     `boil:"VinylSide" json:"VinylSide" toml:"VinylSide" yaml:"VinylSide"`
+	TrackPlays TrackPlaySlice `boil:"TrackPlays" json:"TrackPlays" toml:"TrackPlays" yaml:"TrackPlays"`
 }
 
 // NewStruct creates a new relationship struct
@@ -202,6 +182,22 @@ func (r *trackR) GetVinylSide() *VinylSide {
 	}
 
 	return r.VinylSide
+}
+
+func (o *Track) GetTrackPlays() TrackPlaySlice {
+	if o == nil {
+		return nil
+	}
+
+	return o.R.GetTrackPlays()
+}
+
+func (r *trackR) GetTrackPlays() TrackPlaySlice {
+	if r == nil {
+		return nil
+	}
+
+	return r.TrackPlays
 }
 
 // trackL is where Load methods for each relationship are stored.
@@ -317,6 +313,20 @@ func (o *Track) VinylSide(mods ...qm.QueryMod) vinylSideQuery {
 	return VinylSides(queryMods...)
 }
 
+// TrackPlays retrieves all the track_play's TrackPlays with an executor.
+func (o *Track) TrackPlays(mods ...qm.QueryMod) trackPlayQuery {
+	var queryMods []qm.QueryMod
+	if len(mods) != 0 {
+		queryMods = append(queryMods, mods...)
+	}
+
+	queryMods = append(queryMods,
+		qm.Where("\"track_plays\".\"track_id\"=?", o.ID),
+	)
+
+	return TrackPlays(queryMods...)
+}
+
 // LoadVinylSide allows an eager lookup of values, cached into the
 // loaded structs of the objects. This is for an N-1 relationship.
 func (trackL) LoadVinylSide(ctx context.Context, e boil.ContextExecutor, singular bool, maybeTrack interface{}, mods queries.Applicator) error {
@@ -429,6 +439,112 @@ func (trackL) LoadVinylSide(ctx context.Context, e boil.ContextExecutor, singula
 	return nil
 }
 
+// LoadTrackPlays allows an eager lookup of values, cached into the
+// loaded structs of the objects. This is for a 1-M or N-M relationship.
+func (trackL) LoadTrackPlays(ctx context.Context, e boil.ContextExecutor, singular bool, maybeTrack interface{}, mods queries.Applicator) error {
+	var slice []*Track
+	var object *Track
+
+	if singular {
+		var ok bool
+		object, ok = maybeTrack.(*Track)
+		if !ok {
+			object = new(Track)
+			ok = queries.SetFromEmbeddedStruct(&object, &maybeTrack)
+			if !ok {
+				return errors.New(fmt.Sprintf("failed to set %T from embedded struct %T", object, maybeTrack))
+			}
+		}
+	} else {
+		s, ok := maybeTrack.(*[]*Track)
+		if ok {
+			slice = *s
+		} else {
+			ok = queries.SetFromEmbeddedStruct(&slice, maybeTrack)
+			if !ok {
+				return errors.New(fmt.Sprintf("failed to set %T from embedded struct %T", slice, maybeTrack))
+			}
+		}
+	}
+
+	args := make(map[interface{}]struct{})
+	if singular {
+		if object.R == nil {
+			object.R = &trackR{}
+		}
+		args[object.ID] = struct{}{}
+	} else {
+		for _, obj := range slice {
+			if obj.R == nil {
+				obj.R = &trackR{}
+			}
+			args[obj.ID] = struct{}{}
+		}
+	}
+
+	if len(args) == 0 {
+		return nil
+	}
+
+	argsSlice := make([]interface{}, len(args))
+	i := 0
+	for arg := range args {
+		argsSlice[i] = arg
+		i++
+	}
+
+	query := NewQuery(
+		qm.From(`track_plays`),
+		qm.WhereIn(`track_plays.track_id in ?`, argsSlice...),
+	)
+	if mods != nil {
+		mods.Apply(query)
+	}
+
+	results, err := query.QueryContext(ctx, e)
+	if err != nil {
+		return errors.Wrap(err, "failed to eager load track_plays")
+	}
+
+	var resultSlice []*TrackPlay
+	if err = queries.Bind(results, &resultSlice); err != nil {
+		return errors.Wrap(err, "failed to bind eager loaded slice track_plays")
+	}
+
+	if err = results.Close(); err != nil {
+		return errors.Wrap(err, "failed to close results in eager load on track_plays")
+	}
+	if err = results.Err(); err != nil {
+		return errors.Wrap(err, "error occurred during iteration of eager loaded relations for track_plays")
+	}
+
+	if singular {
+		object.R.TrackPlays = resultSlice
+		for _, foreign := range resultSlice {
+			if foreign.R == nil {
+				foreign.R = &trackPlayR{}
+			}
+			foreign.R.Track = object
+		}
+		return nil
+	}
+
+	for _, foreign := range resultSlice {
+		for _, local := range slice {
+			if local.ID == foreign.TrackID {
+				local.R.TrackPlays = append(local.R.TrackPlays, foreign)
+				if foreign.R == nil {
+					foreign.R = &trackPlayR{}
+				}
+				foreign.R.Track = local
+				break
+			}
+		}
+	}
+
+	return nil
+}
+
 // SetVinylSide of the track to the related item.
 // Sets o.R.VinylSide to related.
 // Adds o to related.R.Tracks.
@@ -473,6 +589,59 @@ func (o *Track) SetVinylSide(ctx context.Context, exec boil.ContextExecutor, ins
 		related.R.Tracks = append(related.R.Tracks, o)
 	}
 
+	return nil
+}
+
+// AddTrackPlays adds the given related objects to the existing relationships
+// of the track, optionally inserting them as new records.
+// Appends related to o.R.TrackPlays.
+// Sets related.R.Track appropriately.
+func (o *Track) AddTrackPlays(ctx context.Context, exec boil.ContextExecutor, insert bool, related ...*TrackPlay) error {
+	var err error
+	for _, rel := range related {
+		if insert {
+			rel.TrackID = o.ID
+			if err = rel.Insert(ctx, exec, boil.Infer()); err != nil {
+				return errors.Wrap(err, "failed to insert into foreign table")
+			}
+		} else {
+			updateQuery := fmt.Sprintf(
+				"UPDATE \"track_plays\" SET %s WHERE %s",
+				strmangle.SetParamNames("\"", "\"", 1, []string{"track_id"}),
+				strmangle.WhereClause("\"", "\"", 2, trackPlayPrimaryKeyColumns),
+			)
+			values := []interface{}{o.ID, rel.ID}
+
+			if boil.IsDebug(ctx) {
+				writer := boil.DebugWriterFrom(ctx)
+				fmt.Fprintln(writer, updateQuery)
+				fmt.Fprintln(writer, values)
+			}
+			if _, err = exec.ExecContext(ctx, updateQuery, values...); err != nil {
+				return errors.Wrap(err, "failed to update foreign table")
+			}
+
+			rel.TrackID = o.ID
+		}
+	}
+
+	if o.R == nil {
+		o.R = &trackR{
+			TrackPlays: related,
+		}
+	} else {
+		o.R.TrackPlays = append(o.R.TrackPlays, related...)
+	}
+
+	for _, rel := range related {
+		if rel.R == nil {
+			rel.R = &trackPlayR{
+				Track: o,
+			}
+		} else {
+			rel.R.Track = o
+		}
+	}
 	return nil
 }
 
