# internal/types/track_play.go
@@ -1,0 +1,83 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package types
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// TrackPlay track play
+//
+// swagger:model trackPlay
+type TrackPlay struct {
+
+	// artist
+	Artist string `json:"artist,omitempty"`
+
+	// id
+	ID int64 `json:"id,omitempty"`
+
+	// played at
+	// Format: date-time
+	PlayedAt strfmt.DateTime `json:"playedAt,omitempty"`
+
+	// title
+	Title string `json:"title,omitempty"`
+}
+
+// Validate validates this track play
+func (m *TrackPlay) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validatePlayedAt(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *TrackPlay) validatePlayedAt(formats strfmt.Registry) error {
+	if swag.IsZero(m.PlayedAt) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("playedAt", "body", "date-time", m.PlayedAt.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this track play based on context it is used
+func (m *TrackPlay) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *TrackPlay) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *TrackPlay) UnmarshalBinary(b []byte) error {
+	var res TrackPlay
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
